src/objects/PlaceTag__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <inlineHelpText>#RRGGBB</inlineHelpText>
        <label>色</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IconURL__c</fullName>
        <label>アイコンURL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <formula>IMAGE(IconURL__c, Name, 60, 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>アイコン</label>
        <type>Text</type>
    </fields>
    <label>場所タグ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>場所タグ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>